--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,40 +1,65 @@
 [package]
-name = "lost_ark_refiner"
+name = "webtracer"
+description = "Pathtracer written in rust - runs in the web and includes an editor."
 version = "0.1.0"
-authors = ["John Gallagher <johnkgallagher@gmail.com>"]
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+edition = "2021"
+license = "MIT OR Apache-2.0"
+authors = ["Shapur <48966182+Shapur1234@users.noreply.github.com>"]
+repository = "https://github.com/Shapur1234/Raytracer"
 
 [lib]
-crate-type = ["cdylib", "rlib"]
-
-[dependencies]
-arrayvec = "0.7"
-crossbeam-channel = "0.5"
-eframe = "0.15.0" # Gives us egui, epi and web+native backends
-fnv = "1.0"
-rand = "0.8"
-
-serde = { version = "1", features = ["derive"], optional = true }
-
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-parking_lot = "0.11"
-
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-getrandom = { version = "0.2", features = ["js"] }
-
-[features]
-default = []
-persistence = ["arrayvec/serde", "eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown
+crate-type = ["cdylib"]
 
 [profile.release]
-opt-level = 2 # fast and small wasm
+opt-level = 3
+lto = true
 
-[patch.crates-io]
+[profile.dev]
+opt-level = 3
+debug = true
 
-# If you want to use the bleeding edge version of `egui`:
-# eframe = { git = "https://github.com/emilk/egui", branch = "master" }
+[dependencies]
+console_error_panic_hook = "0.1.7"
+console_log = "0.2.0"
+js-sys = "0.3.59"
+log = "0.4"
+serde_yaml = "0.8.26"
+wasm-bindgen = "0.2.81"
+wasm_thread = "0.2.0"
+num-traits = "0.2.15"
+rand = "0.8.5"
+lazy_static = "1.4.0"
+getrandom = { version = "0.2.7", features = ["js"] }
+serde = { version = "1.0.116", features = [ "derive", "rc", ] }
 
-# If you fork https://github.com/emilk/egui you can test with:
-# eframe = { path = "../egui/eframe" }
+[dependencies.web-sys]
+version = "0.3.58"
+features = [
+  'console',
+  'Blob',
+  'CanvasRenderingContext2d',
+  'CssStyleDeclaration',
+  'Document',
+  'DomWindowResizeEventDetail',
+  'Element',
+  'Event',
+  'EventListener',
+  'FileReader',
+  'HtmlBodyElement',
+  'HtmlButtonElement',
+  'HtmlCanvasElement',
+  'HtmlElement',
+  'HtmlInputElement',
+  'HtmlSelectElement',
+  'ImageData',
+  'KeyboardEvent',
+  'MouseEvent',
+  'Node',
+  'Performance',
+  'Window',
+]
+
+[build-dependencies]
+convert_case = "0.5.0"
+image = "0.24.3"
+
